--- a/Webpages/style.css
+++ b/Webpages/style.css
@@ -1,13 +1,15 @@
-*
-{
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+*{
     margin: 0;
+    font-family: 'Spartan', sans-serif;
     padding: 0;
-    }
-    body
-    {
+}
+
+body
+{
     background-color: #f1f3f4;
-    font-family: sans-serif;
-    }
+}
  
     .navigation-bar
     {
@@ -33,8 +35,141 @@
     
     }
 
+    /* About page */
+    
+    #page-header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 50px 0 30px 0;
+        background-color: #ede2d4;
+      }
+    #about-head{
+        display: flex;
+        text-align: justify;
+      }
+      
+      #about-head img{
+        width: 450px;
+        height: 300px;
+      }
+      
+      #about-head div{
+        padding: 20px 40px;
+      }      
+    
+
+
+      
     .input-group-text
     {
         background: black;
         border: 1px rgb(9, 239, 55);
     }
+    footer{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+      
+      footer .col{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+      }
+      
+      footer .logo{
+        margin-bottom: 30px;
+      }
+      
+      footer h4{
+        font-size: 14px;
+        padding-bottom: 20px;
+      }
+      
+      footer p{
+        font-size: 13px;
+        margin: 0 0 8px 0;
+      }
+      
+      footer a{
+        font-size: 13px;
+        text-decoration: none;
+        color: #222;
+        margin-bottom: 10px;
+      }
+      
+      footer .follow{
+        margin-top: 20px;
+      }
+      
+      footer .follow i{
+        color: #465b52;
+        padding-right: 4px;
+        cursor: pointer;
+      }
+      
+      footer .install .row img{
+        border: 1px solid #088178;
+        border-radius: 6px;
+        width: 180px;
+        height: 80px;
+      }
+      
+      footer .install img{
+        margin: 10px 0 15px 0;
+      }
+      
+      footer .follow i:hover,
+      footer a:hover{
+        color: #088178;
+      }
+      
+      footer .copyright{
+        width: 100%;
+        text-align: center;
+      }
+      
+
+      @media (max-width:799px){
+        #newsletter .form{
+          width: 70%;
+        }
+
+      }
+
+      @media(max-width: 477px){
+        footer .copyright{
+          text-align: start;
+        }
+
+        #newsletter{
+          padding:40px 20px;
+        }
+        #newsletter .form{
+          width: 100%;
+        }
+      }
+
+
+      /* @media (max-width: 799px){
+        #newsletter .form{
+          width: 70%;
+        }
+        #about-head img{
+          height: 250px;
+        }
+        #about-head div{
+          padding: 20px;
+        }
+        #about-head h2{
+          font-size: 40px;
+        }
+        #about-head p{
+          font-size: 17px;
+         
+      }
+    } */
